# organizer

./: .gitignore  README.md  pyproject.toml  requirements.txt
organizer/: __main__.py  app.py
organizer/common/: utils.py
organizer/models/: config_map.py
organizer/scripts/: downloads.py  functions.py
